[package]
name = "rsave"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
toml = "0.9.2"
keyring = { version = "3.6.2", features = ["linux-native", "apple-native", "windows-native"] }
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
