[package]
name = "rsave"
version = "0.1.0"
edition = "2024"
description = """A Command Line Interface to to save files on object storage"""
authors = ["Charles Gauthereau <charles.gauthereau@soluce-technologies.com>"]
license = "MIT"
keywords = ["s3", "linux", "macos"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/Soluce-Technologies/rsave.git"
homepage = "https://github.com/Soluce-Technologies/rsave"


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
toml = "0.9.2"
#keyring = { version = "3.6.2", features = ["linux-native", "apple-native", "windows-native"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "sync-secret-service", "crypto-openssl", "vendored"] }

uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
dialoguer = "0.11"
