[package]
name = "rsave"
version = "0.1.1"
edition = "2024"
description = """A Command Line Interface to to save files on object storage"""
authors = ["Charles Gauthereau <charles.gauthereau@soluce-technologies.com>"]
license = "MIT"
keywords = ["s3", "linux", "macos"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/Soluce-Technologies/rsave.git"
homepage = "https://github.com/Soluce-Technologies/rsave"


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
toml = "0.9.2"
clap = { version = "4.5.41", features = ["derive"] }
dialoguer = "0.11"
rand = "0.9.2"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
libc = "0.2.174"
nix = { version = "0.30.1", features = ["signal"] }